--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.10.1",
     "@types/googlemaps": "^3.37.0",
     "hammerjs": "^2.0.8",
+    "ng-mocks": "^8.1.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
