--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "prebuild": "ng lint",
     "build": "ng build --prod --aot",
-    "deploy": "ng build --prod  --aot --output-path docs --base-href /thinkific-challenge/",
+    "predeploy": "ng lint",
+    "deploy": "ng build --prod --aot --output-path docs --base-href /thinkific-challenge/",
     "test": "ng test",
+    "test:coverage": "ng test --code-coverage",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
